--- a/app/views/admin/document_collection_email_subscriptions/edit.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/edit.html.erb
@@ -3,6 +3,9 @@
 
 <div class="row">
     <h1>Email notifications</h1>
-
+    <%= render "components/secondary_navigation", {
+      aria_label: "Document navigation tabs",
+      items: secondary_navigation_tabs_items(@collection, request.path)
+    } %>
     <div>Choose the type of email updates users will get if they sign up for notifications.</div>
 </div>
