--- a/app/views/admin/document_collection_email_subscriptions/edit.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/edit.html.erb
@@ -4,11 +4,14 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1>Email notifications</h1>
     <%= render "components/secondary_navigation", {
       aria_label: "Document navigation tabs",
       items: secondary_navigation_tabs_items(@collection, request.path)
     } %>
-    <div>Choose the type of email updates users will get if they sign up for notifications.</div>
+
+    <h2 class="govuk-heading-l">Email notifications</h2>
+    <p class="govuk-body">Choose the type of email updates users will get if they sign up for notifications.</p>
+
+    <%= render partial: 'form' %>
   </div>
 </div>
