Add PUT route for updating document collection email override
When setting an email override field, a user must select a topic, and check
a confirmation box. If they do both of those things, they will be redirected
to the document collection edit page.

It will only be possible to set and email override on a draft document
collection. This restriction will be added in subsequent commit.

--- a/app/views/admin/document_collection_email_subscriptions/_form.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @collection], url: root_path, method: "put" do |form| %>
+<%= form_for [:admin, @collection], url: admin_document_collection_update_email_subscription_path(@collection), method: "put" do |form| %>
   <%= render "govuk_publishing_components/components/radio", {
     name: "override_email_subscriptions",
     id: "email_override_email_subscription_choice",
@@ -31,6 +31,6 @@
         "track-label": "Save"
       }
     } %>
-    <%= link_to("Cancel", root_path, class: "govuk-link govuk-link--no-visited-state") %>
+    <%= link_to("Cancel", admin_document_collection_path(@collection), class: "govuk-link govuk-link--no-visited-state") %>
   </div>
 <% end %>
