Redirect to document summary page after saving an edition
This change is the result of user research which has suggested user experience could be improved by removing the need for visiting the topic assignment page every time an edition is created or updated.

--- a/app/views/admin/editions/_save_or_continue_or_cancel.html.erb
+++ b/app/views/admin/editions/_save_or_continue_or_cancel.html.erb
@@ -12,7 +12,7 @@
   } %>
 
   <%= render "govuk_publishing_components/components/button", {
-    text: "Save and continue",
+    text: "Save and go to document summary",
     secondary_solid: true,
     data_attributes: {
       module: "gem-track-click",
