--- a/app/views/admin/statistics_announcements/_form.html.erb
+++ b/app/views/admin/statistics_announcements/_form.html.erb
@@ -65,11 +65,11 @@
   } %>
 
   <% if statistics_announcement.new_record? %>
-      <%= render '/admin/shared/release_date', {
-        current_release_date: statistics_announcement.current_release_date,
-        name_prefix: "#{statistics_announcement.class.name&.underscore}[current_release_date_attributes]",
-        id_prefix: "#{statistics_announcement.class.name&.underscore}_current_release_date"
-      } %>
+    <%= render '/admin/shared/release_date', {
+      current_release_date: statistics_announcement.current_release_date,
+      name_prefix: "#{statistics_announcement.class.name&.underscore}[statistics_announcement_dates_attributes]",
+      id_prefix: "#{statistics_announcement.class.name&.underscore}_statistics_announcement_dates"
+    } %>
   <% end %>
 
   <div class="govuk-button-group govuk-!-margin-top-8">
