Remove required label from access and opening times field

--- a/app/views/admin/worldwide_offices/_form.html.erb
+++ b/app/views/admin/worldwide_offices/_form.html.erb
@@ -55,7 +55,7 @@
 
   <%= render "components/govspeak-editor", {
     label: {
-      text: "Access and opening times (required)",
+      text: "Access and opening times",
       heading_size: "l",
     },
     name: "worldwide_office[access_and_opening_times]",
