Add a preview link to edition and HTML attachment form
Add a link to the preview a document directly below the body field when a document is saved, publicly visible and has an appropriate change note.

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -69,6 +69,27 @@
     } %>
   </div>
 
+  <% if !edition.new_record? && @edition.versioning_completed? %>
+    <%= render "govuk_publishing_components/components/inset_text", {
+      } do %>
+      <p class="govuk-body">
+        <%= link_to("Preview on website (opens in new tab)",
+        @edition.public_url(draft: true, locale: @edition.primary_locale),
+        class: "govuk-link",
+        target: "_blank",
+        data: {
+          module: "gem-track-click",
+          "track-category": "button-clicked",
+          "track-action": "#{@edition.model_name.singular.dasherize}-button",
+          "track-label": "Preview on website",
+        }) %>
+      </p>
+      <p class="govuk-body">
+        To preview your document on GOV.UK you must save it first.
+      </p>
+    <% end %>
+  <% end %>
+
   <%= render "additional_significant_fields", form: form, edition: form.object %>
 
   <% if edition.document && edition.document.live? && can?(:mark_political, edition) %>
