Use Select language and language instead of locale
Locale doesn't really mean a lot to the average person. We should be
using descriptive language. This updates locale selects lables to
'Select language' and other references to 'Language'.

--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -346,7 +346,7 @@
         <%= render "govuk_publishing_components/components/table", {
           head: [
             {
-              text: "Locale"
+              text: "Language"
             },
             {
               text: "Title"
