--- a/app/views/admin/world_location_news_translations/index.html.erb
+++ b/app/views/admin/world_location_news_translations/index.html.erb
@@ -31,7 +31,7 @@
           <%= render "govuk_publishing_components/components/table", {
           head: [
             {
-              text: "Locale"
+              text: "Language"
             },
             {
               text: sanitize("<a class='govuk-visually-hidden'>Actions</a>"),
@@ -64,7 +64,7 @@
           <%= render "govuk_publishing_components/components/select", {
             id: "translation_locale",
             name: "translation_locale",
-            label: 'Locale',
+            label: "Select Language",
             heading_size: 'm',
             options: @world_location_news.missing_translations.map { |missing_trans| { text: missing_trans
               .native_and_english_language_name, value: missing_trans.code.to_s } }
