--- a/app/views/admin/person_translations/index.html.erb
+++ b/app/views/admin/person_translations/index.html.erb
@@ -36,7 +36,7 @@
         <%= render "govuk_publishing_components/components/table", {
           head: [
             {
-              text: "Locale"
+              text: "Language"
             },
             {
               text: tag.span("Actions", class: "govuk-visually-hidden"),
@@ -67,7 +67,7 @@
         <%= render "govuk_publishing_components/components/select", {
           id: "translation_locale",
           name: "translation_locale",
-          label: "Locale",
+          label: "Select Language",
           heading_size: "l",
           options: @person.missing_translations.map do |locale|
             {
