--- a/app/views/admin/role_translations/index.html.erb
+++ b/app/views/admin/role_translations/index.html.erb
@@ -14,7 +14,7 @@
         <%= render "govuk_publishing_components/components/table", {
           head: [
             {
-              text: "Locale"
+              text: "Language"
             },
             {
               text: tag.span("Actions", class: "govuk-visually-hidden"),
@@ -43,7 +43,7 @@
         <%= render "govuk_publishing_components/components/select", {
           id: "translation_locale",
           name: "translation_locale",
-          label: "Locale",
+          label: "Select Language",
           heading_size: "l",
           options: @role.missing_translations.map do |locale|
             {
