--- a/app/views/admin/worldwide_organisations_translations/index.html.erb
+++ b/app/views/admin/worldwide_organisations_translations/index.html.erb
@@ -62,7 +62,7 @@
         <%= render "govuk_publishing_components/components/select", {
           id: "translation_locale",
           name: "translation_locale",
-          label: "Locale",
+          label: "Select Language",
           heading_size: "l",
           options: options
         } %>
