--- a/app/assets/stylesheets/admin/views/_audit-trail.scss
+++ b/app/assets/stylesheets/admin/views/_audit-trail.scss
@@ -57,8 +57,8 @@ $state-success-text: govuk-colour("green");
         }
       }
 
-      .del:before,
-      .ins:before {
+      .del::before,
+      .ins::before {
         position: absolute;
         font-weight: bold;
         margin-left: -55px;
@@ -69,13 +69,13 @@ $state-success-text: govuk-colour("green");
         bottom: 0;
       }
 
-      .del:before {
+      .del::before {
         color: $state-danger-text;
         background-color: $removed-color;
         content: "−";
       }
 
-      .ins:before {
+      .ins::before {
         color: $state-success-text;
         background-color: $added-color;
         content: "+";
