--- a/app/assets/stylesheets/components/_autocomplete.scss
+++ b/app/assets/stylesheets/components/_autocomplete.scss
@@ -59,7 +59,7 @@ $app-focus-colour: $govuk-focus-colour;
   .autocomplete__option:hover {
     padding: 5px 6px;
 
-    &:before {
+    &::before {
       position: relative;
       top: 3px;
       padding-top: 2px;
