Retain a users org when resetting search fields on document search page
At the moment, when you're searching for a document and click the
"Reset all fields" it doesn't retain the users organisation and
shows documents from all organistions.

As the filter_options partial is reused across multiple views, some of
which don't have the option to filter by organisation, we need to ensure
that only the document search page is affected.

This adds in a helper method which handles this.

--- a/app/views/admin/editions/_filter_options.html.erb
+++ b/app/views/admin/editions/_filter_options.html.erb
@@ -148,6 +148,7 @@
       }
     } %>
 
-    <p class="govuk-body"><%= link_to "Reset all fields", filter_action + "?state=active" + anchor, class: "govuk-link" %></p>
+    <p class="govuk-body">
+    <%= link_to "Reset all fields", reset_search_fields_query_string_params(current_user, filter_action, anchor), class: "govuk-link" %></p>
   <% end %>
 </div>
