--- a/app/views/admin/historical_accounts/index.html.erb
+++ b/app/views/admin/historical_accounts/index.html.erb
@@ -31,7 +31,7 @@
       margin_bottom: 6,
     } %>
 
-    <% if @person.can_have_historical_accounts? && @historical_accounts.present? %>
+    <% if @person.can_have_historical_accounts? && @historical_account.present? %>
       <%= render "govuk_publishing_components/components/button", {
         text: "Create new historical account",
         href: new_admin_person_historical_account_path,
@@ -51,23 +51,22 @@
               text: tag.span("Actions", class: "govuk-visually-hidden"),
             }
           ],
-          rows: @historical_accounts.map do |historical_account|
-            roles = historical_account.roles.collect(&:name).to_sentence
-
+          rows:
             [
-              {
-                text: roles,
-              },
-              {
-                text: historical_account.summary,
-              },
-              {
-                text: link_to(sanitize("View #{tag.span(roles, class: 'govuk-visually-hidden')}"), Whitehall.public_host + historical_account.public_path, class: "govuk-link") +
-                  link_to(sanitize("Edit #{tag.span(roles, class: 'govuk-visually-hidden')}"), edit_admin_person_historical_account_path(@person, historical_account), class: "govuk-link govuk-!-margin-left-2") +
-                  link_to(sanitize("Delete #{tag.span(roles, class: 'govuk-visually-hidden')}"), confirm_destroy_admin_person_historical_account_path(@person, historical_account), class: "govuk-link govuk-!-margin-left-2 gem-link--destructive"),
-              }
+              [
+                {
+                  text: @historical_account.role.name,
+                },
+                {
+                  text: @historical_account.summary,
+                },
+                {
+                  text: link_to(sanitize("View #{tag.span(@historical_account.role.name, class: 'govuk-visually-hidden')}"), Whitehall.public_host + @historical_account.public_path, class: "govuk-link") +
+                    link_to(sanitize("Edit #{tag.span(@historical_account.role.name, class: 'govuk-visually-hidden')}"), edit_admin_person_historical_account_path(@person, @historical_account), class: "govuk-link govuk-!-margin-left-2") +
+                    link_to(sanitize("Delete #{tag.span(@historical_account.role.name, class: 'govuk-visually-hidden')}"), confirm_destroy_admin_person_historical_account_path(@person, @historical_account), class: "govuk-link govuk-!-margin-left-2 gem-link--destructive"),
+                }
+              ]
             ]
-          end
         } %>
       </div>
     <% elsif @person.can_have_historical_accounts? %>
