--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -41,21 +41,9 @@
     <%= yield(:breadcrumbs) %>
 
     <main class="govuk-main-wrapper<%= " govuk-main-wrapper--l" if yield(:back_link).blank? && yield(:breadcrumbs).blank?%>" id="main-content" role="main">
-      <% if flash["notice"].present? %>
-        <div data-module="auto-track-event" data-track-category="flash-message" data-track-action="alert-success" data-track-label="<%= flash["notice"] %>">
-          <%= render "govuk_publishing_components/components/success_alert", {
-            message: flash["notice"]
-          } %>
-        </div>
-      <% end %>
 
-      <% if flash["alert"].present? && yield(:error_summary).blank? %>
-        <div data-module="auto-track-event" data-track-category="flash-message" data-track-action="alert-danger" data-track-label="<%= flash["alert"] %>">
-          <%= render "govuk_publishing_components/components/error_alert", {
-            message: flash["alert"].html_safe
-          } %>
-        </div>
-      <% end %>
+      <%= render Admin::FlashNoticeComponent.new(message: flash[:notice], html_safe: flash["html_safe"]) if flash[:notice] %>
+      <%= render Admin::FlashAlertComponent.new(message: flash[:alert], html_safe: flash["html_safe"]) if flash[:alert] && yield(:error_summary).blank? %>
 
       <% column_width = yield(:page_full_width).present? ? "full" : "two-thirds" %>
 
