--- a/app/views/admin/document_collection_groups/confirm_destroy.html.erb
+++ b/app/views/admin/document_collection_groups/confirm_destroy.html.erb
@@ -1,32 +1,19 @@
-<% content_for :page_class, 'document-collection-groups delete' %>
-<% page_title 'Delete group' %>
+<% content_for :page_title, "Delete #{@group.heading}" %>
+<% content_for :title, "Delete group" %>
+<% content_for :context, @group.heading %>
 
-<div class="row">
-  <section class="col-md-8">
-    <h1>Delete group</h1>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <%= form_with url: admin_document_collection_group_path(@collection, @group), method: :delete do |form| %>
+      <p class="govuk-body govuk-!-margin-bottom-6">Are you sure you want to delete "<%= @group.heading %>"?</p>
 
-    <% if @collection.groups.size == 1 %>
-      <div class="alert alert-danger">
-        <p>
-          Every document collection needs at least one group, so you can’t
-          delete the last one.
-        </p>
-        <p>
-          If you were planning on replacing it you can return to the
-          collection page, click the edit link, and rename it instead.
-        </p>
+       <div class="govuk-button-group">
+        <%= render "govuk_publishing_components/components/button", {
+          text: "Delete",
+          destructive: true,
+        } %>
+        <%= link_to("Cancel", admin_document_collection_groups_path(@collection), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
-
-      <p>
-        <%= link_to 'Return to the collection', admin_document_collection_groups_path(@collection) %>
-      </p>
-    <% else %>
-      <%= form_for [@collection, @group], url: admin_document_collection_group_path(@collection, @group), method: 'delete' do |form| %>
-        <p>
-          Are you sure you want to delete the group ‘<%= @group.heading %>’?
-        </p>
-        <%= form.form_actions(buttons: { delete: 'Delete' }, cancel: admin_document_collection_groups_path(@collection)) %>
-      <% end %>
     <% end %>
-  </section>
+  </div>
 </div>
