--- a/app/views/admin/document_collection_groups/legacy_edit.html.erb
+++ b/app/views/admin/document_collection_groups/legacy_edit.html.erb
@@ -5,7 +5,7 @@
   <section class="col-md-8">
     <h1>Edit group</h1>
 
-    <%= render partial: 'form', locals: { url: admin_document_collection_group_path(@collection, @group) } %>
+    <%= render partial: 'legacy_form', locals: { url: admin_document_collection_group_path(@collection, @group) } %>
   </section>
   <div class="col-md-4">
     <%= legacy_simple_formatting_sidebar hide_inline_attachments_help: true, show_attachments_tab_help: false %>
