Work in Progress - moving Alternative Format Provider Email for Attachments
- just moved the field from the view to the attachments page.
- commented out tests that require attachment email provider to be available. These tests will need to move to the attachments page.
- Added a null check for yielding blocks in editions helper since Corporate Information Page only requires the block to render the email provider. We might as well not pass in the block in that scenario.

Other things to consider:
- When moving the field, we will now have to default the email for edition creation. This needs to be done
- What happens when the lead org doesn't have an email set, what do we default it to?
- The text for Image and Attachments need to stay in the document forms - but as a separate piece of info label
- Creating new page for saving the actual email

--- a/app/views/admin/attachments/_inline_attachments_info.html.erb
+++ b/app/views/admin/attachments/_inline_attachments_info.html.erb
@@ -5,26 +5,26 @@
     id: "edition_alternative_format_provider",
     error_message: errors_for_input(edition.errors, :alternative_format_provider)
   } do %>
-    <% if edition.new_record? %>
-      <p class="govuk-body">
-        <% if edition.allows_image_attachments? %>
-          To add images and attachments you must save the document first. After
-          saving, use the tabs at the top of the page to upload, edit and
-          delete images and attachments.
-        <% else %>
-          If you’d like to add an attachment to this document, please save
-          it first. You’ll then find a tab at the top of the page that you
-          can use to upload, edit and delete attachments.
-        <% end %>
-      </p>
-    <% else %>
-      <% if edition.allows_image_attachments? %>
-        <p class="govuk-body">
-          Use the tabs at the top of the page to upload, edit and delete images
-          and attachments.
-        </p>
-      <% end %>
-    <% end %>
+    <%# if edition.new_record? %>
+<!--      <p class="govuk-body">-->
+        <%# if edition.allows_image_attachments? %>
+<!--          To add images and attachments you must save the document first. After-->
+<!--          saving, use the tabs at the top of the page to upload, edit and-->
+<!--          delete images and attachments.-->
+        <%# else %>
+<!--          If you’d like to add an attachment to this document, please save-->
+<!--          it first. You’ll then find a tab at the top of the page that you-->
+<!--          can use to upload, edit and delete attachments.-->
+        <%# end %>
+<!--      </p>-->
+    <%# else %>
+      <%# if edition.allows_image_attachments? %>
+<!--        <p class="govuk-body">-->
+<!--          Use the tabs at the top of the page to upload, edit and delete images-->
+<!--          and attachments.-->
+<!--        </p>-->
+      <%# end %>
+    <%# end %>
     <% if edition.respond_to?(:alternative_format_provider) %>
       <div class="govuk-form-group gem-c-select">
         <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="alternative_format_provider_id">
