--- a/app/views/admin/corporate_information_pages/_form.html.erb
+++ b/app/views/admin/corporate_information_pages/_form.html.erb
@@ -1,5 +1,1 @@
-<%= standard_edition_form(edition) do |form| %>
-  <div class="js-external-url-set">
-    <%= render 'inline_attachments_info', form: form, edition: edition %>
-  </div>
-<% end %>
+<%= standard_edition_form(edition) %>
