--- a/app/views/admin/document_collection_groups/index.html.erb
+++ b/app/views/admin/document_collection_groups/index.html.erb
@@ -18,7 +18,7 @@
           actions: [
             {
               label: "View",
-              href: "#"
+              href: admin_document_collection_group_path(@collection, group)
             },
             *([{
               label: "Delete",
