Add the DocumentCollectionGroupMemberships#index endpoint
This adds the index endpoint for document collection group
memberships. This page links off to the add document flow (yet to be
built) and either warns the user there are no documents in the group,
or displays a table of documents. Each of these links to the public URL
and the confirm delete page (also still needs to be added).

--- a/app/views/admin/document_collection_groups/show.html.erb
+++ b/app/views/admin/document_collection_groups/show.html.erb
@@ -11,7 +11,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <p class="govuk-body">
-      <%= link_to "Preview on website (opens in a new tab)", @collection.public_url(draft: true), class: "govuk-link", target: "_blank", rel: "noopener" %>
+      <%= link_to "Preview on website (opens in a new tab)", @collection.public_url(draft: true), class: "govuk-link", target: "_blank" %>
     </p>
 
     <%= render "components/secondary_navigation", {
