--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -38,13 +38,14 @@
       <div class="govuk-table--with-actions">
         <%= render "govuk_publishing_components/components/table", {
           rows: @group.memberships.map do |membership|
+            title =  membership.document.latest_edition.title
             [
               {
-                text: membership.document.latest_edition.title,
+                text: title,
               },
               {
-                text: link_to("View", membership.document.latest_edition.public_url, class: "govuk-link") +
-                  link_to("Delete", "#", class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
+                text: link_to(sanitize("View #{tag.span(title, class: "govuk-visually-hidden")}"), membership.document.latest_edition.public_url, class: "govuk-link") +
+                  link_to(sanitize("Delete #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
               }
             ]
           end
