Fix pathing of View link and Cancel link
On the group index page the view link should link to the group documents
index page (memberships).

At the moment the new and edit pages cancel links go back to the group
index page. On the edit group page the backlink should go to the group
show page.

--- a/app/views/admin/document_collection_groups/_form.html.erb
+++ b/app/views/admin/document_collection_groups/_form.html.erb
@@ -35,6 +35,8 @@
       }
     } %>
 
-    <%= link_to "Cancel", admin_document_collection_groups_path(collection), class: "govuk-link govuk-link--no-visited-state" %>
+    <%= link_to "Cancel",
+      group.persisted? ?  admin_document_collection_group_path(collection, group) : admin_document_collection_groups_path(collection),
+      class: "govuk-link govuk-link--no-visited-state" %>
   </div>
 <% end %>
