--- a/app/views/admin/statistics_announcements/show/_main.html.erb
+++ b/app/views/admin/statistics_announcements/show/_main.html.erb
@@ -135,7 +135,7 @@
     <% end %>
     <% unless @edition_taxons.any? %>
       <%= render "govuk_publishing_components/components/warning_text", {
-        text: "Add topic tags before you can publish this document."
+        text: "You need to add topic tags before you can publish this document."
       } %>
     <% end %>
   </section>
