--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@ $govuk-page-width: 1140px;
 @import "./admin/views/contacts";
 @import "./admin/views/dashboard-index";
 @import "./admin/views/document-history-tab";
+@import "./admin/views/document-collection-group-memberships-index";
 @import "./admin/views/edit-edition";
 @import "./admin/views/edit-person";
 @import "./admin/views/edition-resource";
