Changing 'Delete' to 'Remove' when removing a document from a document collection group
Remove makes more sense since we are not deleting the document, we are merely removing it from the document group

--- a/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
+++ b/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
@@ -9,7 +9,7 @@
 
        <div class="govuk-button-group">
         <%= render "govuk_publishing_components/components/button", {
-          text: "Delete",
+          text: "Remove",
           destructive: true,
         } %>
         <%= link_to("Cancel", admin_document_collection_group_members_path(@collection, @group), class: "govuk-link govuk-link--no-visited-state") %>
