--- a/app/views/admin/document_collection_email_subscriptions/_taxonomy_choice.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/_taxonomy_choice.html.erb
@@ -2,13 +2,13 @@
   <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Choose the topic</h4>
   <%= render "govuk_publishing_components/components/select", {
     id: "selected_taxon_content_id",
-    label: "Choose a topic from the topic taxonomy. You can only choose one.",
-    error_message: flash[:selected_taxon_content_id],
-    error_id: flash[:selected_taxon_content_id],
+    label: "Choose a topic from the topic taxonomy. You can only choose one."
+    error_message: flash["selected_taxon_content_id"],
+    error_id: flash["selected_taxon_content_id"],
     options: [
       { text: "", value: "" },
-      { text: "Topic One", value: "9b889c60-2191-11ee-be56-0242ac120002" },
-      { text: "Topic Two", value: "c60-2191-11ee-be56-0242ac120002" }
+      { text: "Topic One", value: "9b889c60-2191-11ee-be56-0242ac120002", selected: selected_option?("9b889c60-2191-11ee-be56-0242ac120002", @collection)},
+      { text: "Topic Two", value: "c60-2191-11ee-be56-0242ac120002", selected: selected_option?("c60-2191-11ee-be56-0242ac120002", @collection)},
     ]
   } %>
   <hr class="govuk-section-break--m">
@@ -18,7 +18,7 @@
     heading_size: "s",
     heading: "You cannot change the email notification settings after the collection is published.",
     no_hint_text: true,
-    error: flash[:email_override_confirmation],
+    error: flash["email_override_confirmation"],
     items: [
       {
         label: "Select this box to confirm you're happy with what you've selected.",
