Show summary page to user when collection is published
When a document collection is published, we will not allow the email
override field to be edited. Users clicking the email notifications tab
for a published document collection will see a summary instead of the form.

--- a/app/views/admin/document_collection_email_subscriptions/edit.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/edit.html.erb
@@ -18,8 +18,13 @@
     } %>
 
     <h2 class="govuk-heading-l">Email notifications</h2>
-    <p class="govuk-body">Choose the type of email updates users will get if they sign up for notifications.</p>
 
-    <%= render partial: 'form' %>
+    <% if taxonomy_topic_cannot_be_set?(@collection) %>
+      <%= render partial: "email_override_summary_page" %>
+    <% else %>
+      <p class="govuk-body">Choose the type of email updates users will get if they sign up for notifications.</p>
+      <%= render partial: 'form' %>
+    <% end %>
   </div>
 </div>
+
