Allow groups to be reordered - Add reorder link - Add reorder view - Add test - Add forbidden message to order & reorder views - Add tracking to Save button on reorder page

--- a/app/views/admin/document_collection_groups/index.html.erb
+++ b/app/views/admin/document_collection_groups/index.html.erb
@@ -32,6 +32,10 @@
         {
           label: "Add group",
           href: new_admin_document_collection_group_path(@collection),
+        },
+        {
+          label: "Reorder group",
+          href: reorder_admin_document_collection_groups_path(@collection)
         }
       ],
     } %>
