Remove required street address label and use input
For some reason the translation page uses a textarea, when an input
is used on the original page. It also indicates it's a required field
when it isn't.

--- a/app/views/admin/contact_translations/edit.html.erb
+++ b/app/views/admin/contact_translations/edit.html.erb
@@ -59,11 +59,11 @@
         }
       } %>
 
-      <%= render "components/translated_textarea", {
-        textarea: {
+      <%= render "components/translated_input", {
+        input: {
           label: {
             heading_size: "l",
-            text: "Street address (required)",
+            text: "Street address",
           },
           name: "contact[street_address]",
           id: "contact_street_address",
