Run `prettier --write`
Update files based on new formatting conventions

--- a/app/assets/stylesheets/admin/views/_edition-search-results.scss
+++ b/app/assets/stylesheets/admin/views/_edition-search-results.scss
@@ -18,7 +18,7 @@
   width: 5%;
 }
 
-.app-view-edition-index__table .govuk-table, {
+.app-view-edition-index__table .govuk-table {
   border-top: 2px solid govuk-colour("black");
 }
 
