--- a/app/assets/stylesheets/admin/views/_features.scss
+++ b/app/assets/stylesheets/admin/views/_features.scss
@@ -14,7 +14,7 @@
   width: 15%;
 }
 
-.app-view-features__table caption, {
+.app-view-features__table caption {
   border-bottom: 2px solid govuk-colour("black");
   padding-bottom: govuk-spacing(2);
 }
