--- a/app/assets/stylesheets/admin/views/_whats-new.scss
+++ b/app/assets/stylesheets/admin/views/_whats-new.scss
@@ -19,8 +19,8 @@
 }
 
 .app-view-whats-new__back-to-top-icon {
-  width: .75em;
-  height: .75em;
+  width: 0.75em;
+  height: 0.75em;
 }
 
 .app-view-whats-new__update {
