Add `// prettier-ignore` to eslint comment blocks
Stop prettier from reformatting nodes with eslint comments

--- a/app/assets/stylesheets/components/_select-with-search.scss
+++ b/app/assets/stylesheets/components/_select-with-search.scss
@@ -290,6 +290,7 @@
     }
   }
 
+  // prettier-ignore
   @media (min-width: 640px) { // stylelint-disable-line media-feature-range-notation
     .choices__list--dropdown .choices__item--selectable,
     .choices__list[aria-expanded] .choices__item--selectable {
