--- a/app/assets/stylesheets/styleguide/_typography.scss
+++ b/app/assets/stylesheets/styleguide/_typography.scss
@@ -37,6 +37,7 @@
   @include govuk-font(48);
   padding-top: 12px;
   padding-bottom: 8px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 8px;
     padding-bottom: 7px;
@@ -48,6 +49,7 @@
   @include govuk-font(36);
   padding-top: 6px;
   padding-bottom: 9px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 8px;
     padding-bottom: 7px;
@@ -59,6 +61,7 @@
   @include govuk-font(27);
   padding-top: 2px;
   padding-bottom: 3px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 7px;
     padding-bottom: 3px;
@@ -70,6 +73,7 @@
   @include govuk-font(24);
   padding-top: 3px;
   padding-bottom: 2px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 7px;
     padding-bottom: 7px;
@@ -81,6 +85,7 @@
   @include govuk-font(19);
   padding-top: 7px;
   padding-bottom: 3px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 6px;
     padding-bottom: 4px;
@@ -92,6 +97,7 @@
   @include govuk-font(16);
   padding-top: 5px;
   padding-bottom: 5px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 6px;
     padding-bottom: 4px;
@@ -104,6 +110,7 @@
 
   padding-top: 6px;
   padding-bottom: 4px;
+  // prettier-ignore
   @media (max-width: 640px) { // stylelint-disable-line media-feature-range-notation
     padding-top: 4px;
     padding-bottom: 1px;
