--- a/app/views/shared/_phase_banner.html.erb
+++ b/app/views/shared/_phase_banner.html.erb
@@ -5,7 +5,7 @@
   <%= render "govuk_publishing_components/components/phase_banner", {
       phase: "What's new",
       ga4_tracking: true,
-      message: sanitize("improvements to the editor workflow -
+      message: sanitize("Improvements to the editor workflow -
         #{
           link_to(
             "read more about the changes",
