Added Document Collections Search Options page
Linked Add Document from Document Collection Group documents page so it takes you to search options

--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -27,7 +27,7 @@
         } %>
 
         <p class="govuk-body govuk-!-text-align-right">
-          <%= link_to "Add document", "#", class: "govuk-link" %>
+          <%= link_to "Add document", admin_document_collection_group_search_options_path(@collection, @group), class: "govuk-link" %>
         </p>
       </div>
     </div>
