Use the current date as the default for consultation response published on input

--- a/app/views/admin/consultation_responses/_form.html.erb
+++ b/app/views/admin/consultation_responses/_form.html.erb
@@ -1,4 +1,5 @@
 <% prefix = "consultation_#{consultation_response.singular_routing_symbol}" %>
+<% today = Time.zone.today %>
 
 <%= form_for [:admin, consultation, consultation_response], url: [:admin, consultation, consultation_response.singular_routing_symbol] do |form| %>
   <%= render "govuk_publishing_components/components/fieldset", {
@@ -11,22 +12,21 @@
       date_only: true,
       error_items: errors_for(consultation_response.errors, :published_on),
       year: {
-        value: params.dig("#{prefix}", "published_on(1i)") || consultation_response.published_on&.year,
+        value: params.dig("#{prefix}", "published_on(1i)") || consultation_response.published_on&.year || today.year,
         id: "#{prefix}_published_on_1i",
         name: "#{prefix}[published_on(1i)]]]",
         label: "Year",
         width: 4,
       },
       month: {
-        value: params.dig("#{prefix}", "published_on(2i)") || consultation_response.published_on&.month,
+        value: params.dig("#{prefix}", "published_on(2i)") || consultation_response.published_on&.month || today.month,
         id: "#{prefix}_published_on_2i",
         name: "#{prefix}[published_on(2i)]]]",
         label: "Month",
         width: 2,
       },
       day: {
-        # id: "consultation_#{consultation_response.singular_routing_symbol}_published_on",
-        value: params.dig("#{prefix}", "published_on(3i)") || consultation_response.published_on&.day,
+        value: params.dig("#{prefix}", "published_on(3i)") || consultation_response.published_on&.day || today.day,
         id: "#{prefix}_published_on_3i",
         name: "#{prefix}[published_on(3i)]]]",
         label: "Day",
