--- a/app/views/admin/sitewide_settings/_form.html.erb
+++ b/app/views/admin/sitewide_settings/_form.html.erb
@@ -33,8 +33,7 @@
                  id: "sitewide_setting_govspeak",
                  error_message: errors_for_input(sitewide_setting.errors, :govspeak),
                  hint: "Please check this is valid govspeak.",
-                 value: sitewide_setting.govspeak
-      %>
+                 value: sitewide_setting.govspeak %>
 
       <div class="govuk-button-group">
         <%= render "govuk_publishing_components/components/button", {
