--- a/app/views/components/_autocomplete.html.erb
+++ b/app/views/components/_autocomplete.html.erb
@@ -43,6 +43,5 @@
     class: "govuk-select",
     size: select[:size],
     multiple: select[:multiple],
-    data: { track_category:, track_label: }
-  %>
+    data: { track_category:, track_label: } %>
 <% end %>
