--- a/app/views/components/_image-cropper.html.erb
+++ b/app/views/components/_image-cropper.html.erb
@@ -2,7 +2,6 @@
   <input type="file" class="js-cropped-image-input" name="<%= name %>" hidden>
   <%= tag.div class: "app-c-image-cropper__container" do %>
     <%= tag.img class: "app-c-image-cropper__image",
-      src: src
-    %>
+      src: src %>
   <% end%>
 <% end %>
