--- a/app/views/admin/attachments/new.html.erb
+++ b/app/views/admin/attachments/new.html.erb
@@ -4,8 +4,7 @@
 <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: attachment, parent_class: "attachment")) %>
 <% render "admin/tracking/subtype_tracking", 
       document_type: attachment.attachable_model_name.titleize.delete(' '), 
-      document: attachable
-%>
+      document: attachable %>
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
