--- a/app/views/admin/editions/_subtype_fields.html.erb
+++ b/app/views/admin/editions/_subtype_fields.html.erb
@@ -1,4 +1,3 @@
 <% # This file is intentionally empty. It acts as a 'base' partial that
 # specific Edition types (e.g. Speech) can override to include extra
-# fields in the edit form.
-%>
+# fields in the edit form. %>
