--- a/app/views/admin/editions/_scheduled_publication_fields.html.erb
+++ b/app/views/admin/editions/_scheduled_publication_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-!-margin-bottom-8">
   <%= hidden_field_tag :scheduled_publication_active, 0, id: "" %>
 
-  <% ## The date input needs a custom edition_scheduled_publication id passed into the day input so we can anchor error to the first input. %>
+  <%# The date input needs a custom edition_scheduled_publication id passed into the day input so we can anchor error to the first input. %>
 
   <%
     hour_param = params.dig("edition", "scheduled_publication(4i)")
