--- a/app/views/admin/document_collection_groups/legacy_index.html.erb
+++ b/app/views/admin/document_collection_groups/legacy_index.html.erb
@@ -13,7 +13,7 @@
     <div id="document-finder" class="document-finder form-inline well remove-top-margin">
       <label for="title">Add</label>
       <div class="document-finder-fields">
-        <%= search_field_tag :title, '', placeholder: 'Title or slug&hellip;'.html_safe, results: 5, autosave: 'unique', autofocus: true, class: 'form-control input-sm' %>
+        <%= search_field_tag :title, '', placeholder: 'Title or slug&hellip;'.html_safe, results: 5, autosave: 'unique', autofocus: true, class: 'form-control input-sm', autocomplete: "off" %>
         <%= button_tag 'Find', type: 'button', id: 'find-documents', class: 'btn btn-default btn-sm add-right-margin' %>
         <%= image_tag 'loading-666666.gif', class: 'js-loader' %>
         <p class="tip">
@@ -35,7 +35,7 @@
     <%= form_tag admin_document_collection_new_non_whitehall_member_path(@collection), class: 'document-finder' do %>
       <div class="document-finder form-inline well remove-top-margin">
         <label for="url">Add</label>
-        <%= text_field_tag :url, flash[:url], placeholder: 'GOV.UK URL', class: 'form-control input-sm' %>
+        <%= text_field_tag :url, flash[:url], placeholder: 'GOV.UK URL', class: 'form-control input-sm', autocomplete: "off" %>
         to the
         <%= select_tag :group_id, options_from_collection_for_select(@groups, :id, :heading, session[:document_collection_selected_group_id]), class: 'form-control input-sm' %>
         group
