--- a/app/views/admin/editions/_legacy_filter_options.html.erb
+++ b/app/views/admin/editions/_legacy_filter_options.html.erb
@@ -10,7 +10,7 @@
     <div class="filter-grouping" id="title_filter">
       <%= label_tag :search_title, 'Title or slug' %>
       <div class="btn-enter-wrapper">
-        <%= search_field_tag :title, @filter.options[:title], id: 'search_title', class: 'form-control', placeholder: 'Search title' %>
+        <%= search_field_tag :title, @filter.options[:title], id: 'search_title', class: 'form-control', placeholder: 'Search title', autocomplete: "off" %>
         <%= submit_tag "enter", class: "btn-enter js-btn-enter js-hidden" %>
       </div>
     </div>
@@ -58,12 +58,12 @@
       <h3>Date (last updated)</h3>
       <%= label_tag :from_date, "From" %>
       <div class="btn-enter-wrapper">
-        <%= text_field_tag :from_date, @filter.options[:from_date], class: 'date form-control', placeholder: "eg 23/07/2013" %>
+        <%= text_field_tag :from_date, @filter.options[:from_date], class: 'date form-control', placeholder: "eg 23/07/2013", autocomplete: "off" %>
         <%= submit_tag "enter", class: "btn-enter js-btn-enter js-hidden" %>
       </div>
       <%= label_tag :to_date, "To" %>
       <div class="btn-enter-wrapper">
-        <%= text_field_tag :to_date, @filter.options[:to_date], class: 'date form-control', placeholder: "eg 23/08/2013" %>
+        <%= text_field_tag :to_date, @filter.options[:to_date], class: 'date form-control', placeholder: "eg 23/08/2013", autocomplete: "off" %>
         <%= submit_tag "enter", class: "btn-enter js-btn-enter js-hidden" %>
       </div>
     </div>
